[fix]: default scrollbar styles

--- a/src/theme/main.scss
+++ b/src/theme/main.scss
@@ -25,17 +25,17 @@ html {
   --scrollbarBG: #f1f1f1;
   --thumbBG: #ccc;
 }
-body::-webkit-scrollbar {
+*::-webkit-scrollbar {
   width: 14px;
 }
-body {
+* {
   scrollbar-width: thin;
   scrollbar-color: var(--thumbBG) var(--scrollbarBG);
 }
-body::-webkit-scrollbar-track {
+*::-webkit-scrollbar-track {
   background: var(--scrollbarBG);
 }
-body::-webkit-scrollbar-thumb {
+*::-webkit-scrollbar-thumb {
   background-color: var(--thumbBG);
   border-radius: 8px;
   border: 3px solid var(--scrollbarBG);
